--- a/research.html
+++ b/research.html
@@ -842,7 +842,7 @@
 					<td align="center">Guest Editor</td>
 					<td>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Biosensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Innovative Technologies of Acquiring, Processing, Modeling, or Utilizing Biomedical and Physiological Signals from Biosensing</i></a><br>
-						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Electroencephalogram/Electromyogram-Based Sensing Technologies for Biomedical Applications: Challenges and Possible Applications</i></a><br>
+						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/L9E9BHCLP8" target="_blank" rel="noopener noreferrer"><i>Electroencephalogram/Electromyogram-Based Sensing Technologies for Biomedical Applications: Challenges and Possible Applications</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 1<sup>st</sup> Edition</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 2<sup>nd</sup> Edition</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Biosensors.png" height="15"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/F99X76258C" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 3<sup>rd</sup> Edition</i></a>
@@ -877,15 +877,15 @@
 				<tr>
 					<td align="center">Area Chair (AC)</td>
 					<td>
-						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="15" class="pop5"></a> - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
-						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
+						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="15" class="pop5"></a> – 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
+						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> – 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
 				<tr>
 					<td align="center">Publicity Chair</td>
 					<td>
-						&#9679; <a href="https://autocare.ai/abc2025" target="_blank" rel="noopener noreferrer"><img src="images/ABC2025.png" height="15" class="pop5"></a> - 7<sup>th</sup>  International Conference on Activity and Behavior Computing, Abu Dhabi, UAE<br>
-						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="15" class="pop5"></a> - 2<sup>nd</sup>  International Conference on AI-generated Content, Beijing<br>
+						&#9679; <a href="https://autocare.ai/abc2025" target="_blank" rel="noopener noreferrer"><img src="images/ABC2025.png" height="15" class="pop5"></a> – 7<sup>th</sup>  International Conference on Activity and Behavior Computing, Abu Dhabi, UAE<br>
+						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="15" class="pop5"></a> – 2<sup>nd</sup>  International Conference on AI-generated Content, Beijing<br>
 						&#9679; ICCI 2025 (in prep.) - International Conference on AI-generated Content, Hongkong, China
 					</td>
 				</tr>
@@ -898,16 +898,16 @@
 				<tr>
 					<td align="center">Session Chair</td>
 					<td>
-						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> - 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
-						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> - 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
-						&#9679; <a href="https://biostec.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> - 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal<br>
-						&#9679; <a href="https://healthinf.scitevents.org/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF25.png" height="12"></a> - 18<sup>th</sup> International Conference on Health Informatics, Porto, Portugal
+						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> – 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
+						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> – 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
+						&#9679; <a href="https://biostec.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> – 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal<br>
+						&#9679; <a href="https://healthinf.scitevents.org/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF25.png" height="12"></a> – 18<sup>th</sup> International Conference on Health Informatics, Porto, Portugal
 					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For 43 international journals, including Nat. Commun., IEEE Sens. J., Biomed. Signal Process. Control, Geo-Spat. Inf. Sci., Remote Sens., Front. Plant Sci., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
+						&#9679; For 43 international journals, including Nat. Commun., Inform. Fusion, IEEE Sens. J., Biomed. Signal Process. Control, Geo-Spat. Inf. Sci., Remote Sens., Front. Plant Sci., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
@@ -916,12 +916,14 @@
 				<tr>
 					<td align="center">Invited Speaker</td>
 					<td>
-						&#9679; <a href="https://www.cdhawer.com/"" target="_blank" rel="noopener noreferrer"><img src="images/CAMT.png" height="15" class="pop5"></a> 
+						&#9679; <a href="http://www.iccmid.org/speakers/" target="_blank" rel="noopener noreferrer"><img src="images/CMID.png" height="15" class="pop5"></a> 
+						– 4<sup>th</sup> International Symposium on Clinical Medicine and Intelligent DevicesHeidelberg, Germany 2025: <i>Wearable Medical AI</i><br>
+						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 
 						Verein der CDHAW-Absolventen und Mitglieder der Tongji-Universität, Düsseldorf, Germany 2018: <a href="https://www.cdhawer.com/meeting-news-2018/" target="_blank" rel="noopener noreferrer"><i>Academics and Art</i></a>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
 						&#9679; <a href="https://biostec.scitevents.org/?y=2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" height="12"></a> 
 						– 12<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Prague, Czech, 2019: <a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
 						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 
-						Karlsruher Institut für Technologie - KD<sup>2</sup>school Adaptive Systems Talks, Karlsruhe, Germany 2022: Smart Knee Bandage <img src="images/KD2School_Workshop.png" height="12" class="pop20">
+						Karlsruher Institut für Technologie - KD<sup>2</sup>school Adaptive Systems Talks, Karlsruhe, Germany 2022: <i>Smart Knee Bandage</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20">
 				</tr>
 				<tr>
 					<td align="center">Open-Source Codebank, Dataset, and Tutorial Contributor</td>
@@ -943,8 +945,8 @@
 						Big Data Challenge Organizer
 					</td>
 					<td>
-						&#9679; <img src="images/BBDC2019.png" height="12" class="pop25"> 4<sup>th</sup> <a href="https://www.uni-bremen.de/csl/media/news/news/bremen-big-data-challenge-2019-studierende-aus-bremen-und-umzu-analysieren-grosse-datenmengen-um-alltagsaktivitaeten-zu-erkennen" target="_blank" rel="noopener noreferrer">BBDC 2019</a>: Big data acquisition, processing, and provision (individually). Over 60 teams from north German universities participated in the final round</br>
-						&#9679; <img src="images/BBDC2024.png" height="12" class="pop25"> From 9<sup>th</sup> <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a>: Main responsible orgnizer for Basic Track
+						&#9679; <img src="images/BBDC2019.png" height="12" class="pop25"> 4<sup>th</sup> BBDC 2019: Big data acquisition, processing, and provision (individually). Over 60 teams from north German universities participated in the final round</br>
+						&#9679; <img src="images/BBDC2024.png" height="12" class="pop25"> 9<sup>th</sup> <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a>: Main responsible orgnizer for Basic Track
 					</td>
 				</tr>
 			</table></td></tr>
