--- a/researchcn.html
+++ b/researchcn.html
@@ -844,7 +844,7 @@
 					<td align="center">特邀编委</td>
 					<td>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Biosensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Innovative Technologies of Acquiring, Processing, Modeling, or Utilizing Biomedical and Physiological Signals from Biosensing</i></a><br>
-						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/70678AF74D" target="_blank" rel="noopener noreferrer"><i>Electroencephalogram/Electromyogram-Based Sensing Technologies for Biomedical Applications: Challenges and Possible Applications</i></a><br>
+						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/L9E9BHCLP8" target="_blank" rel="noopener noreferrer"><i>Electroencephalogram/Electromyogram-Based Sensing Technologies for Biomedical Applications: Challenges and Possible Applications</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/Sensors_Human_Activity_Recognition" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 1<sup>st</sup> Edition</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/sensors/special_issues/671TM05M9J" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 2<sup>nd</sup> Edition</i></a><br>
 						&#9679; <img src="images/MDPI.png" height="15" class="slightpop"> <img src="images/Biosensors.png" height="15"> <img src="images/Sensors.png" height="15"> <a href="https://www.mdpi.com/journal/biosensors/special_issues/F99X76258C" target="_blank" rel="noopener noreferrer"><i>Sensors for Human Activity Recognition: 3<sup>rd</sup> Edition</i></a>
@@ -880,15 +880,15 @@
 					<td align="center">学术会议区域主席（AC）</td>
 					<td>
 						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="15" class="pop5"></a> - 33<sup>rd</sup> International Conference on Artificial Neural Networks, 瑞士卢加诺<br>
-						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, 新加坡
+						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> – 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, 新加坡
 					</td>
 				</tr>
 				<tr>
 					<td align="center">学术会议宣传主席（Publicity Chair）</td>
 					<td>
-						&#9679; <a href="https://autocare.ai/abc2025" target="_blank" rel="noopener noreferrer"><img src="images/ABC2025.png" height="15" class="pop5"></a> - 7<sup>th</sup>  International Conference on Activity and Behavior Computing, 阿联酋阿布扎比<br>
-						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="15" class="pop5"></a> - 2<sup>nd</sup>  International Conference on AI-generated Content, 中国北京<br>
-						&#9679; ICCI 2025（筹） - International Conference on AI-generated Content, 中国香港
+						&#9679; <a href="https://autocare.ai/abc2025" target="_blank" rel="noopener noreferrer"><img src="images/ABC2025.png" height="15" class="pop5"></a> – 7<sup>th</sup>  International Conference on Activity and Behavior Computing, 阿联酋阿布扎比<br>
+						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="15" class="pop5"></a> – 2<sup>nd</sup>  International Conference on AI-generated Content, 中国北京<br>
+						&#9679; ICCI 2025（筹） – International Conference on AI-generated Content, 中国香港
 					</td>
 				</tr>
 				<tr>
@@ -900,36 +900,37 @@
 				<tr>
 					<td align="center">学术会议分会场主席（Session Chair）</td>
 					<td>
-						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> - 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
-						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> - 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
-						&#9679; <a href="https://biostec0.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> - 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal<br>
-						&#9679; <a href="https://healthinf.scitevents.org/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF25.png" height="12"></a> - 18<sup>th</sup> International Conference on Health Informatics, Porto, Portugal
+						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> – 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
+						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> – 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
+						&#9679; <a href="https://biostec0.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="12"></a> – 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal<br>
+						&#9679; <a href="https://healthinf.scitevents.org/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF25.png" height="12"></a> – 18<sup>th</sup> International Conference on Health Informatics, Porto, Portugal
 					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">审稿人</a></td>
 					<td>
-						&#9679; 43本国际期刊，包括Nat. Commun.、IEEE Sens. J.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Plant Sci.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
+						&#9679; 43本国际期刊，包括Nat. Commun.、Inform. Fusion, IEEE Sens. J.、Biomed. Signal Process. Control、Geo-Spat. Inf. Sci., Remote Sens.、Front. Plant Sci.、Front Bioeng. Biotechnol.、Physiol. Meas.、Phys. Scr.、 ISPRS Int. J. Geo-Inf.、Biomimetics、Biosensors等<br>
 						&#9679; 多个国际会议, 包括IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> 表彰“极其高水平的同行评审胜任力”（<i>an exceptionally high level of peer review competency</i>）<br>
 						&#9679; Sensors <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 最佳审稿人奖</a>
 					</td>
 				</tr>
 				<tr>
-					<td align="center">主讲人</td>
+					<td align="center">国际学术会议主旨报告、演讲和艺术讲座</td>
 					<td>
-						&#9679; <a href="https://www.cdhawer.com/"" target="_blank" rel="noopener noreferrer"><img src="images/CAMT.png" height="15" class="pop5"></a> 同济大学中德工程学院，德国杜塞尔多夫，2018：<a href="https://www.cdhawer.com/meeting-news-2018/" target="_blank" rel="noopener noreferrer"><i>学术与艺术</i></a>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
+						&#9679; <a href="http://www.iccmid.org/speakers/" target="_blank" rel="noopener noreferrer"><img src="images/CMID.png" height="15" class="pop5"></a> – 第4届临床医学与智能设备国际研讨会，德国海德堡，2025：<i>穿戴式人工智能</i><br>
+						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 同济大学中德工程学院，德国杜塞尔多夫，2018：<i>学术与艺术</i>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
 						&#9679; <a href="https://biostec.scitevents.org/?y=2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" height="12"></a> – 第12届国际生物医学工程系统和技术联合会议，捷克布拉格，2019：<a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
 						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 卡尔斯鲁厄理工学院KD<sup>2</sup>school适应性系统年度座谈会，德国卡尔斯鲁厄，2022：<i>智能膝盖绷带</i> <img src="images/KD2School_Workshop.png" height="12" class="pop20">
 				</tr>
 				<tr>
 				<td align="center">开源代码库、大数据和在线教程贡献者</td>
 					<td>
-						&#9679; <img src="images/biosignalsnotebooks.png" height="12" class="pop10"></a> Biosignals Notebooks：传感器信号处理和人工智能线上教程和代码集<br>
-						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSFEL.png" height="12" class="pop10"></a> 
-						<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSFEL</a>：时序信号特征提取代码库<br>
-						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSSEARCH.png" height="12" class="pop10"></a> 
-						<a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSSEARCH</a>：时序信号子序列搜索代码库<br>
+						&#9679; Biosignals Notebooks <img src="images/biosignalsnotebooks.png" height="12" class="pop10">：传感器信号处理和人工智能线上教程和代码集<br>
+						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSFEL</a>
+						<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSFEL.png" height="12" class="pop10"></a>：时序信号特征提取代码库<br>
+						&#9679; <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSSEARCH</a>
+						<a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer"><img src="images/TSSEARCH.png" height="12" class="pop10"></a> ：时序信号子序列搜索代码库<br>
 						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">CSL-SHARE</a>:
 						多模态可穿戴式人体动作传感大数据集<br>
 						&#9679; <a href="https://www.uni-bremen.de/en/csl/research/sensorder-artifact-classification-during-biosignal-acquisition" target="_blank" rel="noopener noreferrer">sensORder</a>:
@@ -941,8 +942,8 @@
 						大数据竞赛负责人
 					</td>
 					<td>
-						&#9679; <img src="images/BBDC2019.png" height="12" class="pop25"> 第4届不来梅—北德大数据竞赛 <a href="https://www.uni-bremen.de/csl/media/news/news/bremen-big-data-challenge-2019-studierende-aus-bremen-und-umzu-analysieren-grosse-datenmengen-um-alltagsaktivitaeten-zu-erkennen" target="_blank" rel="noopener noreferrer">BBDC 2019</a>：（独立承担）大数据采集、处理和提供工作。北德数十所高校的60多支队伍参加最后的角逐</br>
-						&#9679; <img src="images/BBDC2024.png" height="12" class="pop25"> 自第9届 <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a> 起：Basic Track总负责人。获得德国近十所高校以及来北德多个教育主管机构的广泛关注与支持
+						&#9679; <img src="images/BBDC2019.png" height="12" class="pop25"> 第4届不来梅—北德大数据竞赛 BBDC 2019：（独立承担）大数据采集、处理和提供工作。北德数十所高校的60多支队伍参加最后的角逐</br>
+						&#9679; <img src="images/BBDC2024.png" height="12" class="pop25"> 第9届 <a href="https://bbdc.csl.uni-bremen.de/en/2024-2/pupils/" target="_blank" rel="noopener noreferrer">BBDC 2024</a>：Basic Track总负责人。获得德国近十所高校以及来北德多个教育主管机构的广泛关注与支持
 					</td>
 				</tr>
 			</table></td></tr>
