--- a/research.html
+++ b/research.html
@@ -1432,10 +1432,12 @@
 					<td>
 						Research assistant and convenor of Hui Liu's research group since 2022<br>
 						Bachelor thesis 2024 @ Bremen, Germany (full score)<br>
+						Master thesis 2024 @ Bremen, Germany (full score)<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Artifacts during biosignal acquisition<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time ECG signal processing
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time EMG signal processing
 						<br><br>
-						&rarr; Master student @ University of Bremen<br>
+						&rarr; Ph.D candidate @ University of Bremen<br>
 					</td>
 				</tr>
 
@@ -1804,6 +1806,31 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td align="center">
+						<img src="images/students/陶元兆.jpg" width="150" class="round"></a><br>
+						&copy;<b>Yuanzhao Tao</b>
+					</td>
+					<td>
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Stock price forecast
+						<br><br>
+						&rarr; Industry @ Tianchang, Anhui
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/何博宇.jpg" width="150" class="round"></a><br>
+						&copy;<b>Boyu, He</b>
+					</td>
+					<td>
+						Bachelor Thesis 2025 @ Nanjing, China<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Website vulnerability detection
+						<br><br>
+						&rarr; Industry @ Hefei, Anhui
+					</td>
+				</tr>
 				<!--
 				<tr>
 					<td align="center">
