--- a/researchcn.html
+++ b/researchcn.html
@@ -1001,10 +1001,10 @@
 						<a href="https://www.pluxbiosignals.com/" target="_blank" rel="noopener noreferrer"><img src="images/PLUX.png" height="60"></a><br>
 						2019年以来<br>
 						PLUX无线生物信号传感器公司<br>
-						（葡萄牙里斯本）
+						葡萄牙里斯本
 					</td>
 					<td>
-						&#9679; 特聘<a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">高级研发工程师</a><br>
+						&#9679; 特聘<a href="https://qrco.de/bdHmtW" target="_blank" rel="noopener noreferrer">高级研发总监</a><br>
 						&#9679; 组织企业和大学之间的合作研究、教育和社会活动<br>
 						&#9679; 研发实时识别与反馈技术<br>
 						&#9679; 为多模态可穿戴生物医学信号采集软件的开发提供咨询<br>
@@ -1031,7 +1031,7 @@
 				</tr>
 				<tr>
 					<td align="center"><a href="https://www.bridge-online.de/campusideen" target="_blank" rel="noopener noreferrer"><img src="images/CAMPUSiDEEN22.jpg" height="50" class="pop5"></a><br>CAMPUSiDEEN 2022<br>商业创意大赛<br></td>
-					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">公共选择奖</a> <img src="images/CAMPUSiDEEN.png" height="12" class="pop40"><td>
+					<td>&#9679; <a href="https://bridge-online.de/en/campusideen/review/2022-3rd-audience-award" target="_blank" rel="noopener noreferrer">铜奖</a> <img src="images/CAMPUSiDEEN.png" height="12" class="pop40"><td>
 				</tr>
 				<tr>
 					<td align="center"><img src="images/Golden_Panda.png" height="50"><br>金熊猫全球创新创业大赛 2022<br>成都市人民政府举办</td>
@@ -1340,7 +1340,7 @@
 						硕士毕设 2020 @ 德国不来梅（满分）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别；特征空间降维
 						<br><br>					
-						&rarr; 不来梅大学博士在读
+						&rarr; 博士研究生 @ 不来梅大学
 					</td>
 				</tr>
 
@@ -1429,11 +1429,13 @@
 					</td>
 					<td>
 						科研助理和研究小组召集人 自2022<br>
-						本科毕设 2024 @ 德国不来梅（满分）<br>
+						本科毕设 2024 @ 德国不来梅（满分） <br>
+						硕士毕设 2025 @ 德国不来梅（满分）<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 生物信号采集过程中的伪影识别<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时心电信号处理
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时肌电信号处理
 						<br><br>
-						&rarr; 硕士研究生 @ 不来梅大学
+						&rarr; 博士研究生 @ 不来梅大学
 					</td>
 				</tr>
 
@@ -1802,6 +1804,32 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td align="center">
+						<img src="images/students/陶元兆.jpg" width="150" class="round"></a><br>
+						&copy;<b>陶元兆</b>
+					</td>
+					<td>
+						本科毕设 2025 @ 中国南京<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 股价预测
+						<br><br>
+						&rarr; 工业界 @ 安徽天长
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/何博宇.jpg" width="150" class="round"></a><br>
+						&copy;<b>何博宇</b>
+					</td>
+					<td>
+						本科毕设 2025 @ 中国南京<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 网站漏洞检测
+						<br><br>
+						&rarr; 工业界 @ 安徽合肥
+					</td>
+				</tr>
+				
 				<!--
 				<tr>
 					<td align="center">
