--- a/research.html
+++ b/research.html
@@ -288,16 +288,6 @@
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Deep Learning Framework for Healthy LifeStyle Monitoring and Outdoor Localization.</i> Rafiq, M., Albhassabi, N., Alhasson, H. F., AlHammadi, D. A., Alshehri, M., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=A+Deep+Learning+Framework+for+Healthy+LifeStyle+Monitoring+and+Outdoor+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-			 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="" target="_blank" rel="noopener noreferrer"></a>
-					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>A Hybrid Deep Learning Pipeline for Wearable Sensors-based Human Activity Recognition.</i> Algarni, A., Abro, I. A., Alshehri, M., AlQahtani, Y., Alshahrani, A., and Liu, H.* (2025). Computer, Materials & Continuah. Tech Science Press. ISSN: 1546-2218.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
@@ -326,12 +316,18 @@
 				<tr><td>
 					<i>Multi-Modal Remote Sensory Learning for Multi-Objects over Autonomous Devices.</i> Naseer, A., Almudawi, N., Aljuaid, H., Alazeb, A., Alqahtani, Y., Algarni, A., Jalal, A.*, and Liu, H.* (2025). Frontiers in Bioengineering and Biotechnology, 13:1430222. ISSN: 2296-4185.<br>
 					<a href="https://scholar.google.com/scholar?q=Multi-Modal+Remote+Sensory+Learning+for+Multi-Objects+over+Autonomous+Devices" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Multi-modal-remote-sensory-learning-for-over-Naseer-Almudawi/afb79f30ca3fcebfaca42666ad3a5e1f10d4b99d" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/391929938_Multi-modal_remote_sensory_learning_for_multi-objects_over_autonomous_devices" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fbioe.2025.1430222" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1430222" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1430222</a>
+				</td></tr>
+				<tr><td>
+					<i>A Deep Learning Framework for Healthy LifeStyle Monitoring and Outdoor Localization.</i> Rafiq, M., Albhassabi, N., Alhasson, H. F., AlHammadi, D. A., Alshehri, M., Jalal, A.*, and Liu, H.* (2025). IEEE Access.<br>
+					<a href="https://scholar.google.com/scholar?q=A+Deep+Learning+Framework+for+Healthy+LifeStyle+Monitoring+and+Outdoor+Localization" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Deep-Learning-Framework-for-Healthy-LifeStyle-and-Rafiq-Alshammari/e0cda5a47821a8322c3994f5ee7fa0779e685ac1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/392155986_A_Deep_Learning_Framework_for_Healthy_LifeStyle_Monitoring_and_Outdoor_Localization" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ieeexplore.ieee.org/document/11015451" target="_blank" rel="noopener noreferrer"><img src="images/IEEE.png" height="15"></a>
+			 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/ACCESS.2025.3573439" target="_blank" rel="noopener noreferrer">10.1109/ACCESS.2025.3573439</a>
 				</td></tr>
 				<tr><td>
 					<i>Thermo-Environ-Economic Analysis of a Novel Solar-Assisted Heat Pump System; Comparison with Conventional Single Stage and Cascaded Air Source Heat Pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 322:135647. Elsevier. ISSN: 0360-5442.<br>
